<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/mqtt_header">
        <SwitchPreference
            app:defaultValue="@string/mqtt_default_enabled"
            app:key="@string/mqtt_default_enabled"
            app:title="@string/mqttenable_title"
            app:useSimpleSummaryProvider="true"
            />

        <EditTextPreference
            app:defaultValue="@string/mqtt_default_host"
            app:key="@string/mqtt_host"
            app:title="@string/mqtthost_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="@string/mqtt_default_port"
            app:key="@string/mqtt_port"
            app:title="@string/mqttport_title"
            app:useSimpleSummaryProvider="true"
            />

        <ListPreference
            app:key="@string/mqtt_interval"
            app:title="MQTT update interval"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="@string/mqtt_default_interval"
            app:entries="@array/interval"
            app:entryValues="@array/interval_values"
            />

        <EditTextPreference
            app:defaultValue="@string/mqtt_default_topic"
            app:key="@string/mqtt_topic"
            app:title="@string/mqtttopic_title"
            app:useSimpleSummaryProvider="true"
            app:summary="Will extend to android/batteries/topic"
            />

    </PreferenceCategory>

</PreferenceScreen>